Added bottom action buttons and styling

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,6 +14,16 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 		<title>Pixel Video Chat</title>
+
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.13/dist/shoelace/shoelace.css"
+		/>
+		<script
+			type="module"
+			src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.13/dist/shoelace/shoelace.esm.js"
+		></script>
+
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
