--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,7 +24,7 @@
 			src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.13/dist/shoelace/shoelace.esm.js"
 		></script>
 
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="/style.css" />
 	</head>
 	<body>
 		<div id="root"></div>
